# Maxwell-interface-updater

./: CITATION.cff  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  interface_0_1_2_test.csv  interface_0_1_2_training.csv  interface_1_0_0_test.csv  interface_1_0_0_training.csv  interface_1_0_1_test.csv  interface_1_0_2_test.csv  interface_1_0_2_training.csv  main.cc  maxwell01.ipynb  maxwell01.tex  maxwell10.ipynb  solution-0.vtu  solution-1.vtu  solution_0_0_test.csv  solution_0_0_training.csv  solution_0_3_test.csv  solution_0_3_training.csv  solution_1_0_test.csv  solution_1_1_training.csv  solution_1_3_test.csv  solution_1_3_training.csv
KirasFM-NN/: CMakeLists.txt  create_test_data.sh  create_test_data_2.sh  create_trainings_data.sh  create_trainings_data_2.sh  default_options.prm  main.cc  options.prm
KirasFM-NN/include/: boundary_values.h  cross_product.h  grid_generator.h  maxwell_solver.h  parameter_reader.h  post_processing.h  (+2 more)
include/: grid_generator.h  maxwell_solver.h  parameter_reader.h  surface_communicator.h
source/: boundary_values.cc  grid_generator.cc  maxwell_solver.cc
training_data/: interface_0_1_1_test.csv  interface_0_1_1_training.csv  interface_0_1_3_test.csv  interface_0_1_3_training.csv  interface_0_1_4_test.csv  interface_0_1_4_training.csv  interface_1_0_1_test.csv  interface_1_0_1_training.csv  interface_1_0_3_test.csv  interface_1_0_3_training.csv  interface_1_0_4_test.csv  interface_1_0_4_training.csv  solution_0_1_test.csv  solution_0_1_training.csv  solution_1_1_test.csv  solution_1_1_training.csv
(+6 files in other folders)
